Pipeline/org_omg_CosNaming/org_omg_CosNamingOutputResult.txt
Sample: _BindingIteratorStub_5
----------------------------------------------------------------
output:
./org_omg_CosNaming/javaFiles/_BindingIteratorStub_5.java:1: error: package org.omg.CosNaming does not exist
import org.omg.CosNaming._BindingIteratorStub;
                        ^
./org_omg_CosNaming/javaFiles/_BindingIteratorStub_5.java:5: error: cannot find symbol
        _BindingIteratorStub stub = new _BindingIteratorStub();
        ^
  symbol:   class _BindingIteratorStub
  location: class _BindingIteratorStub_5
./org_omg_CosNaming/javaFiles/_BindingIteratorStub_5.java:5: error: cannot find symbol
        _BindingIteratorStub stub = new _BindingIteratorStub();
                                        ^
  symbol:   class _BindingIteratorStub
  location: class _BindingIteratorStub_5
3 errors


================================================================

